--- a/src/main/java/walkingkooka/template/Template.gwt.xml
+++ b/src/main/java/walkingkooka/template/Template.gwt.xml
@@ -17,6 +17,6 @@
   -->
 
 <module>
-    <inherits name="walkingkooka.tree.json.Json"/>
+    <inherits name="walkingkooka.text.printer.Printer"/>
     <source path=""/>
 </module>
