walkingkooka-text-cursor-parser-Parser

--- a/src/main/java/walkingkooka/template/Template.gwt.xml
+++ b/src/main/java/walkingkooka/template/Template.gwt.xml
@@ -18,5 +18,6 @@
 
 <module>
     <inherits name="walkingkooka.text.printer.Printer"/>
+    <inherits name="walkingkooka.text.cursor.parser.Parser"/>
     <source path=""/>
 </module>
