GWT inherit "walkingkooka.tree.json.Json"

--- a/src/main/java/walkingkooka/template/Template.gwt.xml
+++ b/src/main/java/walkingkooka/template/Template.gwt.xml
@@ -19,6 +19,6 @@
 <module>
     <inherits name="walkingkooka.text.cursor.parser.Parser"/>
     <inherits name="walkingkooka.text.printer.Printer"/>
-    <inherits name="walkingkooka.tree.Tree"/>
+    <inherits name="walkingkooka.tree.json.Json"/>
     <source path=""/>
 </module>
