--- a/src/main/java/walkingkooka/template/Template.gwt.xml
+++ b/src/main/java/walkingkooka/template/Template.gwt.xml
@@ -17,6 +17,7 @@
   -->
 
 <module>
+    <inherits name="walkingkooka.net.Net"/>
     <inherits name="walkingkooka.text.cursor.parser.Parser"/>
     <inherits name="walkingkooka.text.printer.Printer"/>
     <inherits name="walkingkooka.tree.json.Json"/>
